# thermorawfilereader.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  ffirawfilereader.sln
.github/workflow/: test.yaml
.github/workflows/: isolation.yaml  test.yaml
dotnetrawfilereader-sys/: Cargo.toml
dotnetrawfilereader-sys/lib/: ThermoFisher.CommonCore.RawFileReader.xml  checksum  librawfilereader.deps.json  librawfilereader.runtimeconfig.json
dotnetrawfilereader-sys/src/: buffer.rs  lib.rs  runtime.rs
ffilib/: .gitignore  Cargo.toml  build.rs
ffilib/src/: buffer.rs  main.rs
librawfilereader/: .gitignore  Lib.cs  README.md  helpers.cs  librawfilereader.csproj  nuget.config  status.cs  test_rawfilereader.csproj
librawfilereader/dep/: README.md
librawfilereader/dep/FlatBuffers/: ByteBuffer.cs  Google.FlatBuffers.csproj
librawfilereader/lib/core/: ThermoFisher.CommonCore.Data.xml
librawfilereader/lib/update/: ThermoFisher.CommonCore.BackgroundSubtraction.xml  ThermoFisher.CommonCore.Data.xml  thermofisher.commoncore.backgroundsubtraction.8.0.35.nupkg  thermofisher.commoncore.data.8.0.35.nupkg  thermofisher.commoncore.massprecisionestimator.8.0.35.nupkg  thermofisher.commoncore.randomaccessreaderplugin.8.0.35.nupkg  thermofisher.commoncore.rawfilereader.8.0.35.nupkg
mzdata-thermo/: Cargo.toml
mzdata-thermo/src/: instruments.rs  lib.rs  thermo_raw.rs
schema/: schema.fbs
src/: buffer.rs  gen.rs  lib.rs  runtime.rs  wrap.rs
tests/data/: small.mgf
thermorawfilereader/: Cargo.toml
thermorawfilereader/examples/: view_logs.rs  with_threads.rs  write_mgf.rs
thermorawfilereader/src/: bin.rs  constants.rs  gen.rs  lib.rs  runtime.rs  wrap.rs
