[package]
name = "thermorawfilereader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name="fficheck"
path="src/bin.rs"

[dependencies]
flatbuffers = "23.5.26"
netcorehost = { version = "0.17.0", default-features = false, features = [
    "nethost-download",
    "net7_0"
]}
tempdir = "0.3.7"
