[package]
name = "dotnetrawfilereader-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
include_dir = "0.7.3"
netcorehost = { version = "0.17.0", default-features = false, features = [
    "nethost-download",
    "net7_0"
]}
tempdir = "0.3.7"
