[package]
name = "dotnetrawfilereader-sys"
version = "0.1.0"
edition = "2021"

description = "A low-level interface to a in-process dotnet runtime for Thermo Fisher's RawFileReader library"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = ["nethost-download"]

nethost-download = ["netcorehost/nethost-download"]

[dependencies]
include_dir = "0.7.3"
netcorehost = { version = "0.17.0", default-features = false, features = [
    "net7_0",
    "nethost"
]}
tempdir = "0.3.7"
