[package]
name = "dotnetrawfilereader-sys"
version = "0.3.1"
edition = "2021"

description = "A low-level interface to a in-process dotnet runtime for Thermo Fisher's RawFileReader library"
license = "Apache-2.0"

repository = "https://github.com/mobiusklein/thermorawfilereader.rs.git"
documentation = "https://docs.rs/dotnetrawfilereader-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = ["nethost-download", "net8_0"]

nethost-download = ["netcorehost/nethost-download"]
doc-only = ["netcorehost/doc-cfg", "netcorehost/nightly", "netcorehost-latest"]
net8_0 = ["netcorehost/net8_0"]
netcorehost-latest = ["netcorehost/latest"]

[dependencies]
include_dir = "0.7.3"
netcorehost = { version = "0.17.0", default-features = false, features = [
    "nethost"
]}
tempfile = "3.10.1"
thiserror = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["doc-only"]
