[package]
name = "mzdata-thermo"
version = "0.1.0"
edition = "2021"


[features]

default = ["nethost-download", "net7_0"]

nethost-download = ["thermorawfilereader/nethost-download"]

net7_0 = ["thermorawfilereader/net7_0"]
net8_0 = ["thermorawfilereader/net8_0"]


[dependencies]

mzdata = { default-features = false, version = "0.12.0" }
mzpeaks = { version = "0.9.0", default-features = false }
thermorawfilereader = { path = "../thermorawfilereader", version = "0.2.0", default-features = false }
sha1 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }