[package]
name = "thermorawfilereader"
version = "0.1.0"
edition = "2021"

description = "A (relatively) high level interface to Thermo Fisher's RawFileReader library"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name="fficheck"
path="src/bin.rs"

[features]

default = ["nethost-download"]

nethost-download = ["netcorehost/nethost-download"]

[dependencies]
flatbuffers = "23.5.26"
netcorehost = { version = "0.17.0", default-features = false, features = [
    "net7_0",
    "nethost"
]}
dotnetrawfilereader-sys = { version = "0.1.0", path = "../dotnetrawfilereader-sys/"}
