[package]
name = "thermorawfilereader"
version = "0.3.0"
edition = "2021"

description = "A (relatively) high level interface to Thermo Fisher's RawFileReader library"
license = "Apache-2.0"

repository = "https://github.com/mobiusklein/thermorawfilereader.rs.git"
documentation = "https://docs.rs/thermorawfilereader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name="fficheck"
path="src/bin.rs"

[[example]]
name = "with_threads"

[features]

default = ["nethost-download", "net8_0"]

nethost-download = ["dotnetrawfilereader-sys/nethost-download"]
doc-only = ["dotnetrawfilereader-sys/doc-only"]
net8_0 = ["netcorehost/net8_0", "dotnetrawfilereader-sys/net8_0"]
netcorehost-latest = ["netcorehost/latest", "dotnetrawfilereader-sys/netcorehost-latest"]


[dependencies]
flatbuffers = "23.5.26"
netcorehost = { version = "0.17.0", default-features = false, features = [
    "nethost"
]}

dotnetrawfilereader-sys = { version = "0.3.0", path = "../dotnetrawfilereader-sys/", default-features = false}
bytemuck = "1.18.0"

[dev-dependencies]
rayon = { version = "1.9.0" }

[package.metadata.docs.rs]
no-default-features = true
features = ["doc-only"]
